# rainbowctl

./: .env  Cargo.toml  cava.conf  justfile  rainbowctl.service  run-server.sh
.cargo/: config.toml
src/: filters.rs  lib.rs  main.rs  patterns.rs
static/: index.html  main.js
webclient/: .lock-old.json  package-lock.json  package.json
webclient/public/: index.html
webclient/src/: App.vue  colors.js  main.js
webclient/src/components/: LightForm.vue
