[package]
name = "rainbowctl"
version = "0.1.0"
authors = ["Carlo <CRefice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
palette = { version = "0.5", features = ["serializing"] }
rs_ws281x = "0.3"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
